# Hippy.Doryen

./: CMakeLists.txt
Include/Hippy/Doryen/: Frame.hpp  Layoutable.hpp  Rectangle.hpp
Source/: App.cpp  Frame.cpp  Layoutable.cpp
Test/: CMakeLists.txt
Test/Scenario/: CMakeLists.txt
Test/Scenario/Direction/: CMakeLists.txt  DirectionScenario.cpp  Readme.md
Test/Unit/: CMakeLists.txt  LayoutableTest.cpp  RectangleTest.cpp
