ENABLE_TESTING()

MACRO(HIPPY_DORYEN_TEST_UNIT _NAME_TARGET _NAME_FILE)

    ADD_EXECUTABLE(${_NAME_TARGET} ${_NAME_FILE})
    SET_TARGET_PROPERTIES(${_NAME_TARGET} PROPERTIES CXX_STANDARD 17)
    TARGET_LINK_LIBRARIES(${_NAME_TARGET} PRIVATE doctest)
    TARGET_LINK_LIBRARIES(${_NAME_TARGET} PRIVATE Hippy::Doryen)
    ADD_TEST(NAME ${_NAME_TARGET} COMMAND ${_NAME_TARGET})

ENDMACRO()

ADD_SUBDIRECTORY(Unit/)